cmake_minimum_required(VERSION 3.16)
project(C___prime_16_)

set(CMAKE_CXX_STANDARD 14)

add_executable(C___prime_16_ main.cpp Compare.h my_find.h Blob.cpp Blob.h Blobptr.cpp Blobptr.h my_Vec.cpp my_Vec.h DebugDelete.cpp DebugDelete.h sharedPointer.cpp sharedPointer.h unique_pointer.cpp unique_pointer.h Blob2.h delete.h Flip.h print.h debug_rep.h errMsg.h my_make_shared.h count_vec.h)